--- a/src/templates/index.slim
+++ b/src/templates/index.slim
@@ -9,7 +9,7 @@ html.no-js lang="en" ng-app="DunnoApp"
     link href="css/app.css" rel="stylesheet" /
     script src="js/modernizr/modernizr.js"
   body
-    nav class="top-bar" data-topbar=''
+    nav class="top-bar" data-topbar=""
       ul class="title-area"
         li class="name"
           h1
