--- a/src/templates/index.slim
+++ b/src/templates/index.slim
@@ -9,16 +9,26 @@ html.no-js lang="en" ng-app="DunnoApp"
     link href="css/app.css" rel="stylesheet" /
     script src="js/modernizr/modernizr.js"
   body
-    nav class="top-bar" data-topbar=""
-      ul class="title-area"
-        li class="name"
-          h1
-            a href="#" Dunno
-      section class="top-bar-section"
-        ul class="left"
-          li
-            a href="#content.html" Home
-    .row ng-view=""
+    .row
+      .contain-to-grid
+        nav class="top-bar" data-topbar=""
+          ul class="title-area"
+            li class="name"
+              h1
+                a href="#" Dunno
+          section class="top-bar-section"
+            ul class="left"
+              li
+                a href="#content.html" Aulas
+              li
+                a href="#content.html" Turmas
+              li
+                a href="#content.html" Calendário
+              li
+                a href="#content.html" Tarefas
+
+    .content ng-view=""
+
     script src="js/jquery/dist/jquery.min.js"
     script src="js/foundation/js/foundation.min.js"
     script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular.js"
