--- a/src/sass/_layout.sass
+++ b/src/sass/_layout.sass
@@ -1,14 +1,13 @@
 @import shared/placeholders
 
-.row
-  background: white
-
 .top-bar
   padding-left: 50px
 
-.title
+.page-title
+  background: white
   text-align: center
   height: 115px
+  margin-bottom: 40px
 
   // TODO: Use Compass' shadow
   box-shadow: 0px 1.5px 1px #D3D3D3
