--- a/src/templates/index.slim
+++ b/src/templates/index.slim
@@ -7,6 +7,7 @@ html.no-js lang="en" ng-app="DunnoApp"
     link href="css/normalize.css" rel="stylesheet" /
     link href="css/foundation.css" rel="stylesheet" /
     link href="css/app.css" rel="stylesheet" /
+    link href="css/courses.css" rel="stylesheet" /
     script src="js/modernizr/modernizr.js"
   body
     .row
@@ -21,7 +22,7 @@ html.no-js lang="en" ng-app="DunnoApp"
               li
                 a href="#content.html" Aulas
               li
-                a href="#content.html" Turmas
+                a href="#/courses.html" Turmas
               li
                 a href="#content.html" Calendário
               li
@@ -35,16 +36,12 @@ html.no-js lang="en" ng-app="DunnoApp"
     script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular-route.js"></script>
     javascript:
       $(document).foundation();
-
+      routes = #{{routes}};
       angular.module('DunnoApp', ['ngRoute'])
       .config(['$routeProvider', function($routeProvider){
-        $.getJSON('routes.json', function(data){
-          routes = data['routes'];
-          for(var i = 0; i < routes.length; i++) {
-            $routeProvider.when('/' + routes[i], {templateUrl: routes[i]});
-          }
-          $routeProvider.otherwise({redirectTo: 'content.html'});
-          window.location = '#';
-        });
+        for(var i = 0; i < routes.length; i++) {
+          $routeProvider.when('/' + routes[i], {templateUrl: routes[i]});
+        }
+        $routeProvider.otherwise({redirectTo: '/courses.html'});
       }]);
 
