--- a/src/templates/courses.slim
+++ b/src/templates/courses.slim
@@ -1,12 +1,12 @@
 .row.page-title
   h1 Turmas
 .row
-  ul.large-block-grid-2
-    li.class.scheme-1
+  ul.courses.large-block-grid-2
+    li.course.scheme-1
       .title
         h1 Tr230
         span.subtitle Colégio Anchieta - 2ª série
-      table.classes
+      table.events
         tr ng-repeat="i in [1,2,3,4,5,6]"
           td icon
           td 03
