Course's card size adjusts

--- a/src/sass/_layout.sass
+++ b/src/sass/_layout.sass
@@ -1,12 +1,14 @@
 @import shared/placeholders
 
+$page-title-height: 110px
+
 .top-bar
   padding-left: 50px
 
 .page-title
   background: white
   text-align: center
-  height: 115px
+  height: $page-title-height
   margin-bottom: 40px
 
   // TODO: Use Compass' shadow
