--- a/src/templates/courses.slim
+++ b/src/templates/courses.slim
@@ -6,12 +6,26 @@
       .title
         h1 Tr230
         span.subtitle Colégio Anchieta - 2ª série
-      table.events
-        tr ng-repeat="i in [1,2,3,4,5,6]"
-          td icon
-          td 03
-          td Português
-          td 10 mai
-          td seg
-          td 10h-12h
+      .events
+        table
+          tr ng-repeat="i in [1,2,3,4,5,6]"
+            td icon
+            td 03
+            td Português
+            td 10 mai
+            td seg
+            td 10h-12h
 
+    li.course.scheme-2
+      .title
+        h1 j107
+        span.subtitle Colégio Anchieta - 2ª série
+      .events
+        table
+          tr ng-repeat="i in [1,2,3]"
+            td icon
+            td 03
+            td Literatura
+            td 10 mai
+            td seg
+            td 10h-12h
