--- a/src/sass/_settings.sass
+++ b/src/sass/_settings.sass
@@ -64,8 +64,8 @@ $body-bg: #F2F2F2
 // $info-color: #a0d3e8;
 
 // We use these to make sure border radius matches unless we want it different.
-// $global-radius: 3px;
-// $global-rounded: 1000px;
+//$global-radius: 3px
+$global-rounded: 3px
 
 // We use these to control inset shadow shiny edges and depressions.
 // $shiny-edge-size: 0 1px 0;
