--- a/src/templates/index.slim
+++ b/src/templates/index.slim
@@ -4,6 +4,7 @@ html.no-js lang="en" ng-app="DunnoApp"
     meta charset="utf-8" /
     meta content="width=device-width, initial-scale=1.0" name="viewport" /
     title Foundation
+    link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'
     link href="css/normalize.css" rel="stylesheet" /
     link href="css/foundation.css" rel="stylesheet" /
     link href="css/app.css" rel="stylesheet" /
