--- a/src/sass/_settings.sass
+++ b/src/sass/_settings.sass
@@ -43,7 +43,8 @@ $row-width: rem-calc(1100)
 // We use these to control various global styles
 $body-bg: #F2F2F2
 // $body-font-color: #222;
-// $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$body-font-family: "Lato", sans-serif
+//"Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 // $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
 
@@ -65,7 +66,7 @@ $body-bg: #F2F2F2
 
 // We use these to make sure border radius matches unless we want it different.
 //$global-radius: 3px
-$global-rounded: 3px
+//$global-rounded: 1000px
 
 // We use these to control inset shadow shiny edges and depressions.
 // $shiny-edge-size: 0 1px 0;
@@ -1083,10 +1084,12 @@ $global-rounded: 3px
 // These control the background color for the table and even rows
 // $table-bg: #fff;
 // $table-even-row-bg: #f9f9f9  ;
+$table-even-row-bg: #fff
 
 // These control the table cell border style
 // $table-border-style: solid;
 // $table-border-size: 1px;
+$table-border-size: 0
 // $table-border-color: #ddd;
 
 // These control the table head styles
