--- a/src/templates/courses.slim
+++ b/src/templates/courses.slim
@@ -1,5 +1,5 @@
 .row.page-title
-  a class="button round btn-header-left btn-style-1" Criar nova turma
+  a class="button radius btn-header-left btn-style-1" Criar nova turma
   h1 Turmas
 .row
   ul.courses.large-block-grid-2
