--- a/src/templates/courses.slim
+++ b/src/templates/courses.slim
@@ -3,6 +3,7 @@
   h1 Turmas
 .row
   ul.courses.large-block-grid-2
+
     li.course.scheme-1
       .title
         h1 Tr230
@@ -30,3 +31,32 @@
             td 10 mai
             td seg
             td 10h-12h
+
+    li.course.scheme-3
+      .title
+        h1 Tr230
+        span.subtitle Colégio Anchieta - 2ª série
+      .events
+        table
+          tr ng-repeat="i in [1,2,3,4,5,6]"
+            td icon
+            td 03
+            td Português
+            td 10 mai
+            td seg
+            td 10h-12h
+
+    li.course.scheme-4
+      .title
+        h1 Tr230
+        span.subtitle Colégio Anchieta - 2ª série
+      .events
+        table
+          tr ng-repeat="i in [1,2,3,4,5,6]"
+            td icon
+            td 03
+            td Português
+            td 10 mai
+            td seg
+            td 10h-12h
+
