--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -3,6 +3,8 @@
 @import layout
 @import buttons
 @import courses
+@import events
+@import colors
 
 // Or selectively include components
 // @import
