--- a/src/templates/index.slim
+++ b/src/templates/index.slim
@@ -20,7 +20,7 @@ html.no-js lang="en" ng-app="DunnoApp"
           section class="top-bar-section"
             ul class="left"
               li
-                a href="#content.html" Aulas
+                a href="#/events.html" Aulas
               li
                 a href="#/courses.html" Turmas
               li
