--- a/src/templates/courses.slim
+++ b/src/templates/courses.slim
@@ -4,8 +4,8 @@
 .row
   ul.courses.large-block-grid-2
 
-    li.course.scheme-1
-      .title
+    li.course
+      .scheme-1.title
         h1 Tr230
         span.subtitle Colégio Anchieta - 2ª série
       .events
@@ -18,8 +18,8 @@
             td seg
             td 10h - 12h
 
-    li.course.scheme-2
-      .title
+    li.course
+      .scheme-2.title
         h1 j107
         span.subtitle Colégio Anchieta - 2ª série
       .events
@@ -32,8 +32,8 @@
             td seg
             td 10h - 12h
 
-    li.course.scheme-3
-      .title
+    li.course
+      .scheme-3.title
         h1 Tr230
         span.subtitle Colégio Anchieta - 2ª série
       .events
@@ -46,8 +46,8 @@
             td seg
             td 10h - 12h
 
-    li.course.scheme-4
-      .title
+    li.course
+      .scheme-4.title
         h1 Tr230
         span.subtitle Colégio Anchieta - 2ª série
       .events
