--- a/src/sass/shared/_schemes.sass
+++ b/src/sass/shared/_schemes.sass
@@ -1,21 +1,21 @@
 
-.scheme-1 
-  border-color: #dcbf4d !important
+.scheme-1
+  border-color: #dcbf4d
   background: #FEDD59
   .subtitle
     color: #B19B40
-.scheme-2 
+.scheme-2
   background: #54C5FF
-  border-color: #437E9B !important
+  border-color: #437E9B
   .subtitle
     color: #437E9B
 .scheme-3
   background: #FF926A
-  border-color: #B06449 !important
+  border-color: #B06449
   .subtitle
     color: #B06449
 .scheme-4
   background: #A893FF
-  border-color: #7567B4 !important
+  border-color: #7567B4
   .subtitle
     color: #7567B4
