Rename 'class' class to 'course' on events

--- a/src/sass/_events.sass
+++ b/src/sass/_events.sass
@@ -33,7 +33,7 @@ li.event
     text-transform: uppercase
     padding: 0 20px
 
-  .class
+  .course
     font-size: 0.7rem
     line-height: 0.7rem
     position: relative
