--- a/src/templates/events.slim
+++ b/src/templates/events.slim
@@ -1,7 +1,7 @@
 .row.page-title
 	a class="button radius btn-header-left btn-style-1" Planejar nova aula
 	h1 Aulas
-.row 
+.row
 	ul.event-card.small-block-grid-3
 
 		li.event
@@ -9,7 +9,7 @@
 				h1 Tr230
 				span.subtitle Colégio Anchieta - 2ª série
 			.status.scheme-1 
-				span.class Portugues
+				span.course Portugues
 				a class="button radius timer" 0:30
 				a class="button radius timer" 0:30
 			.notes
@@ -21,7 +21,7 @@
 				h1 Tr230
 				span.subtitle Colégio Anchieta - 2ª série
 			.status.scheme-2
-				span.class Portugues
+				span.course Portugues
 				a class="button radius timer" 0:30
 				a class="button radius timer" 0:30
 			.notes
@@ -33,7 +33,7 @@
 				h1 Tr230
 				span.subtitle Colégio Anchieta - 2ª série
 			.status.scheme-3
-				span.class Portugues
+				span.course Portugues
 				a class="button radius timer" 0:30
 				a class="button radius timer" 0:30
 			.notes
