--- a/src/templates/courses.slim
+++ b/src/templates/courses.slim
@@ -4,7 +4,7 @@
 .row
   ul.courses.large-block-grid-2
 
-    li.course
+    li.card.course
       .scheme-1.title
         h1 Tr230
         span.subtitle Colégio Anchieta - 2ª série
@@ -18,7 +18,7 @@
             td seg
             td 10h - 12h
 
-    li.course
+    li.card.course
       .scheme-2.title
         h1 j107
         span.subtitle Colégio Anchieta - 2ª série
@@ -32,7 +32,7 @@
             td seg
             td 10h - 12h
 
-    li.course
+    li.card.course
       .scheme-3.title
         h1 Tr230
         span.subtitle Colégio Anchieta - 2ª série
@@ -46,7 +46,7 @@
             td seg
             td 10h - 12h
 
-    li.course
+    li.card.course
       .scheme-4.title
         h1 Tr230
         span.subtitle Colégio Anchieta - 2ª série
