--- a/src/templates/events.slim
+++ b/src/templates/events.slim
@@ -4,7 +4,7 @@
 .row
 	ul.event-card.small-block-grid-3
 
-		li.event
+		li.card.event
 			.title.scheme-1
 				h1 Tr230
 				span.subtitle Colégio Anchieta - 2ª série
@@ -16,7 +16,7 @@
 				ul.note ng-repeat="i in [1,2,3,4,5,6]"
 					li ICONE Lorem ipsum dolor sit amet kolor mat vaan dark
 
-		li.event
+		li.card.event
 			.title.scheme-2
 				h1 Tr230
 				span.subtitle Colégio Anchieta - 2ª série
@@ -28,7 +28,7 @@
 				ul.note ng-repeat="i in [1,2,3,4,5,6]"
 					li ICONE Lorem ipsum dolor sit amet kolor mat vaan dark
 
-		li.event
+		li.card.event
 			.title.scheme-3
 				h1 Tr230
 				span.subtitle Colégio Anchieta - 2ª série
