Restructuring layout to fit full width

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,10 +1,10 @@
 @import settings
 @import foundation
 @import layout
-@import buttons
-@import courses
-@import events
-@import colors
+@import pages/courses
+@import pages/events
+@import shared/colors
+@import shared/buttons
 @import shared/schemes
 @import shared/cards
 
