--- a/src/templates/courses.slim
+++ b/src/templates/courses.slim
@@ -1,6 +1,9 @@
-.row.page-title
-  a class="button radius btn-header-left btn-style-1" Criar nova turma
-  h1 Turmas
+header.page-title
+  .row
+    .large-3.columns.vertical-center
+      a class="button radius btn-style-1" Criar nova turma
+    .large-4.large-centered.vertical-center.columns
+      h1 Turmas
 .row
   ul.courses.large-block-grid-2
 
