--- a/src/templates/events.slim
+++ b/src/templates/events.slim
@@ -1,6 +1,9 @@
-.row.page-title
-	a class="button radius btn-header-left btn-style-1" Planejar nova aula
-	h1 Aulas
+header.page-title
+  .row
+    .large-3.columns.vertical-center
+      a class="button radius btn-header-left btn-style-1" Planejar nova aula
+    .large-4.large-centered.vertical-center.columns
+      h1 Aulas
 .row
 	ul.event-card.small-block-grid-3
 
