--- a/src/sass/_layout.sass
+++ b/src/sass/_layout.sass
@@ -13,9 +13,12 @@ $page-title-height: 110px
   // TODO: Use Compass' shadow
   box-shadow: 0px 1.5px 1px #D3D3D3
 
+  .row
+    height: 100%
+
+  .button
+    margin: 0
+
   h1
-    @extend %vertical-center
     text-transform: uppercase
     text-align: center
-    width: 500px
-    margin: 0 auto
