--- a/src/sass/pages/_events.sass
+++ b/src/sass/pages/_events.sass
@@ -64,4 +64,4 @@ li.event
     font-size: 0.7rem
     float: right
     margin-left: 5px
-    @extend %vertical-center
+    @extend .vertical-center
