Setting row width to 960px

--- a/src/templates/events.slim
+++ b/src/templates/events.slim
@@ -5,7 +5,7 @@ header.page-title
     .large-4.large-centered.vertical-center.columns
       h1 Aulas
 .row
-	ul.event-card.small-block-grid-3
+	ul.events.large-block-grid-3
 
 		li.card.event
 			.title.scheme-1
