--- a/src/templates/index.slim
+++ b/src/templates/index.slim
@@ -25,6 +25,8 @@ html.no-js lang="en" ng-app="DunnoApp"
             a href="#content.html" Calendário
           li
             a href="#content.html" Tarefas
+          li
+            a href="#styleguide.html" Styleguide
 
     .content ng-view=""
 
