--- a/src/icons/styles.css
+++ b/src/icons/styles.css
@@ -1,19 +1,19 @@
 @charset "UTF-8";
 
 @font-face {
-  font-family: "dunno-icon-fonnt";
-  src:url("fonts/dunno-icon-fonnt.eot");
-  src:url("fonts/dunno-icon-fonnt.eot?#iefix") format("embedded-opentype"),
-    url("fonts/dunno-icon-fonnt.woff") format("woff"),
-    url("fonts/dunno-icon-fonnt.ttf") format("truetype"),
-    url("fonts/dunno-icon-fonnt.svg#dunno-icon-fonnt") format("svg");
+  font-family: "dunno-icon-font";
+  src:url("fonts/dunno-icon-font.eot");
+  src:url("fonts/dunno-icon-font.eot?#iefix") format("embedded-opentype"),
+    url("fonts/dunno-icon-font.woff") format("woff"),
+    url("fonts/dunno-icon-font.ttf") format("truetype"),
+    url("fonts/dunno-icon-font.svg#dunno-icon-font") format("svg");
   font-weight: normal;
   font-style: normal;
 
 }
 
 [data-icon]:before {
-  font-family: "dunno-icon-fonnt" !important;
+  font-family: "dunno-icon-font" !important;
   content: attr(data-icon);
   font-style: normal !important;
   font-weight: normal !important;
@@ -27,7 +27,7 @@
 
 [class^="icon-"]:before,
 [class*=" icon-"]:before {
-  font-family: "dunno-icon-fonnt" !important;
+  font-family: "dunno-icon-font" !important;
   font-style: normal !important;
   font-weight: normal !important;
   font-variant: normal !important;
