Using font-icons

--- a/src/templates/index.slim
+++ b/src/templates/index.slim
@@ -14,7 +14,7 @@ html.no-js lang="en" ng-app="DunnoApp"
       ul class="title-area"
         li class="name"
           h1
-            a href="#" Dunno
+            a class="icon icon-dunno-1" href="#"
       section class="top-bar-section"
         ul class="left"
           li
