--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,6 +1,7 @@
 @import settings
 @import foundation
 @import layout
+@import icons
 @import pages/courses
 @import pages/events
 @import shared/colors
