Sidebar on styleguide

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -2,12 +2,13 @@
 @import foundation
 @import layout
 @import icons
-@import pages/courses
-@import pages/events
 @import shared/colors
 @import shared/buttons
 @import shared/schemes
 @import shared/cards
+@import pages/courses
+@import pages/events
+@import pages/styleguide
 
 // Or selectively include components
 // @import
