--- a/src/icons/styles.css
+++ b/src/icons/styles.css
@@ -122,7 +122,7 @@
 .icon-triangle:before {
   content: "I";
 }
-.icon-files-add:before {
+.icon-folder-add:before {
   content: "J";
 }
 .icon-dunno-logo:before {
@@ -131,7 +131,7 @@
 .icon-tasks:before {
   content: "L";
 }
-.icon-doc-circle:before {
+.icon-file-circle:before {
   content: "M";
 }
 .icon-clock:before {
@@ -140,7 +140,7 @@
 .icon-calendar:before {
   content: "O";
 }
-.icon-doc-check:before {
+.icon-file-check:before {
   content: "P";
 }
 .icon-cards:before {
@@ -149,7 +149,7 @@
 .icon-chat-2:before {
   content: "R";
 }
-.icon-doc-lock:before {
+.icon-file-lock:before {
   content: "S";
 }
 .icon-lists:before {
@@ -158,7 +158,7 @@
 .icon-strip:before {
   content: "U";
 }
-.icon-docs:before {
+.icon-files:before {
   content: "V";
 }
 .icon-chat:before {
@@ -167,7 +167,7 @@
 .icon-support:before {
   content: "X";
 }
-.icon-doc:before {
+.icon-file:before {
   content: "Y";
 }
 .icon-check:before {
@@ -176,13 +176,10 @@
 .icon-arrow-circle-right:before {
   content: "0";
 }
-.icon-arrow-back-left:before {
-  content: "i";
-}
 .icon-circle-small:before {
   content: "d";
 }
-.icon-circle-small-1:before {
+.icon-circle-small-outline:before {
   content: "f";
 }
 .icon-circle-big-outline:before {
@@ -190,4 +187,10 @@
 }
 .icon-circle-big:before {
   content: "h";
+}
+.icon-arrow-back:before {
+  content: "j";
+}
+.icon-trash:before {
+  content: "k";
 }
