logo icon updated

--- a/src/templates/events.slim
+++ b/src/templates/events.slim
@@ -1,7 +1,7 @@
 header.page-title
   .row
     .large-3.columns.vertical-center
-      a class="button radius btn-header-left btn-style-1" Planejar nova aula
+      a href="#/diary.html" class="button radius btn-header-left btn-style-1" Planejar nova aula
     .large-4.large-centered.vertical-center.columns
       h1 Aulas
 .row
