--- a/src/templates/index.slim
+++ b/src/templates/index.slim
@@ -9,12 +9,15 @@ html.no-js lang="en" ng-app="DunnoApp"
     link href="css/foundation.css" rel="stylesheet" /
     link href="css/app.css" rel="stylesheet" /
     script src="js/modernizr/modernizr.js"
+    script src="js/vendor/jquery.js"
+    script src="js/foundation/foundation.js"
+    script src="js/foundation/foundation.dropdown.js"
   body
     nav class="top-bar" data-topbar=""
       ul class="title-area"
         li class="name"
           h1
-            a class="icon icon-dunno-1" href="#"
+            a class="icon-dunno-logo" href="#"
       section class="top-bar-section"
         ul class="left"
           li
