--- a/src/sass/_icons.sass
+++ b/src/sass/_icons.sass
@@ -31,77 +31,160 @@
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
-.icon-business-48:before
+
+.icon-note:before 
   content: "a"
 
-.icon-business-79:before
+.icon-graph:before 
   content: "b"
 
-.icon-chevron-medium-circle-3-01:before
+.icon-arrow-left:before 
   content: "c"
 
-.icon-circle-1:before
-  content: "d"
-
-.icon-circle-2:before
+.icon-arrow-circle-left:before 
   content: "e"
 
-.icon-circle-big-1:before
-  content: "f"
-
-.icon-circle-big-2:before
-  content: "g"
-
-.icon-communication-29:before
-  content: "h"
-
-.icon-communication-53:before
-  content: "i"
-
-.icon-communication-84:before
-  content: "j"
-
-.icon-communication-91:before
-  content: "k"
-
-.icon-communication-94:before
+.icon-notification:before 
   content: "l"
 
-.icon-content-42:before
+.icon-mail:before 
   content: "m"
 
-.icon-files-38:before
+.icon-search-files:before 
   content: "n"
 
-.icon-content-44:before
+.icon-play-circle:before 
   content: "o"
 
-.icon-dunno-1:before
+.icon-thermometer:before 
   content: "p"
 
-.icon-edition-24:before
+.icon-not-ok:before 
   content: "q"
 
-.icon-edition-25:before
+.icon-play:before 
   content: "r"
 
-.icon-edition-34:before
+.icon-unlock:before 
   content: "s"
 
-.icon-edition-49:before
+.icon-lock:before 
   content: "t"
 
-.icon-edition-55:before
+.icon-video:before 
   content: "u"
 
-.icon-edition-56:before
+.icon-ok:before 
   content: "v"
 
-.icon-files-8:before
+.icon-boy:before 
   content: "w"
 
-.icon-files-26:before
+.icon-close:before 
   content: "x"
 
-.icon-files-30:before
+.icon-attach:before 
   content: "y"
+
+.icon-edition:before 
+  content: "z"
+
+.icon-add:before 
+  content: "A"
+
+.icon-user-uncheck:before 
+  content: "B"
+
+.icon-user-check:before 
+  content: "C"
+
+.icon-transfer:before 
+  content: "D"
+
+.icon-search:before 
+  content: "E"
+
+.icon-eye:before 
+  content: "F"
+
+.icon-quiz:before 
+  content: "G"
+
+.icon-users:before 
+  content: "H"
+
+.icon-triangle:before 
+  content: "I"
+
+.icon-folder-add:before 
+  content: "J"
+
+.icon-dunno-logo:before 
+  content: "K"
+
+.icon-tasks:before 
+  content: "L"
+
+.icon-file-circle:before 
+  content: "M"
+
+.icon-clock:before 
+  content: "N"
+
+.icon-calendar:before 
+  content: "O"
+
+.icon-file-check:before 
+  content: "P"
+
+.icon-cards:before 
+  content: "Q"
+
+.icon-chat-2:before 
+  content: "R"
+
+.icon-file-lock:before 
+  content: "S"
+
+.icon-lists:before 
+  content: "T"
+
+.icon-strip:before 
+  content: "U"
+
+.icon-files:before 
+  content: "V"
+
+.icon-chat:before 
+  content: "W"
+
+.icon-support:before 
+  content: "X"
+
+.icon-file:before 
+  content: "Y"
+
+.icon-check:before 
+  content: "Z"
+
+.icon-arrow-circle-right:before 
+  content: "0"
+
+.icon-circle-small:before 
+  content: "d"
+
+.icon-circle-small-outline:before 
+  content: "f"
+
+.icon-circle-big-outline:before 
+  content: "g"
+
+.icon-circle-big:before 
+  content: "h"
+
+.icon-arrow-back:before 
+  content: "j"
+
+.icon-trash:before 
+  content: "k"
+
