--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -8,7 +8,10 @@
 @import shared/cards
 @import pages/courses
 @import pages/events
+@import pages/diary
 @import pages/styleguide
+
+
 
 // Or selectively include components
 // @import
