--- a/src/sass/_icons.sass
+++ b/src/sass/_icons.sass
@@ -38,13 +38,10 @@
 .icon-graph:before 
   content: "b"
 
-.icon-arrow-left:before 
-  content: "c"
-
 .icon-arrow-circle-left:before 
   content: "e"
 
-.icon-notification:before 
+.icon-buzz:before 
   content: "l"
 
 .icon-mail:before 
@@ -140,7 +137,7 @@
 .icon-cards:before 
   content: "Q"
 
-.icon-chat-2:before 
+.icon-talk:before 
   content: "R"
 
 .icon-file-lock:before 
@@ -187,4 +184,10 @@
 
 .icon-trash:before 
   content: "k"
+
+.icon-arrow-open:before 
+  content: "c"
+
+.icon-arrow-down:before 
+  content: "i"
 
