--- a/src/icons/styles.css
+++ b/src/icons/styles.css
@@ -44,13 +44,10 @@
 .icon-graph:before {
   content: "b";
 }
-.icon-arrow-left:before {
-  content: "c";
-}
 .icon-arrow-circle-left:before {
   content: "e";
 }
-.icon-notification:before {
+.icon-buzz:before {
   content: "l";
 }
 .icon-mail:before {
@@ -146,7 +143,7 @@
 .icon-cards:before {
   content: "Q";
 }
-.icon-chat-2:before {
+.icon-talk:before {
   content: "R";
 }
 .icon-file-lock:before {
@@ -193,4 +190,10 @@
 }
 .icon-trash:before {
   content: "k";
+}
+.icon-arrow-open:before {
+  content: "c";
+}
+.icon-arrow-down:before {
+  content: "i";
 }
