Overlay on hover

--- a/src/sass/_icons.sass
+++ b/src/sass/_icons.sass
@@ -31,160 +31,158 @@
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
-
-.icon-note:before 
+.icon-note:before
   content: "a"
 
-.icon-graph:before 
+.icon-graph:before
   content: "b"
 
-.icon-arrow-left:before 
+.icon-arrow-right:before
   content: "c"
 
-.icon-arrow-circle-left:before 
+.icon-arrow-circle-left:before
   content: "e"
 
-.icon-notification:before 
+.icon-notification:before
   content: "l"
 
-.icon-mail:before 
+.icon-mail:before
   content: "m"
 
-.icon-search-files:before 
+.icon-search-files:before
   content: "n"
 
-.icon-play-circle:before 
+.icon-play-circle:before
   content: "o"
 
-.icon-thermometer:before 
+.icon-thermometer:before
   content: "p"
 
-.icon-not-ok:before 
+.icon-not-ok:before
   content: "q"
 
-.icon-play:before 
+.icon-play:before
   content: "r"
 
-.icon-unlock:before 
+.icon-unlock:before
   content: "s"
 
-.icon-lock:before 
+.icon-lock:before
   content: "t"
 
-.icon-video:before 
+.icon-video:before
   content: "u"
 
-.icon-ok:before 
+.icon-ok:before
   content: "v"
 
-.icon-boy:before 
+.icon-boy:before
   content: "w"
 
-.icon-close:before 
+.icon-close:before
   content: "x"
 
-.icon-attach:before 
+.icon-attach:before
   content: "y"
 
-.icon-edition:before 
+.icon-edition:before
   content: "z"
 
-.icon-add:before 
+.icon-add:before
   content: "A"
 
-.icon-user-uncheck:before 
+.icon-user-uncheck:before
   content: "B"
 
-.icon-user-check:before 
+.icon-user-check:before
   content: "C"
 
-.icon-transfer:before 
+.icon-transfer:before
   content: "D"
 
-.icon-search:before 
+.icon-search:before
   content: "E"
 
-.icon-eye:before 
+.icon-eye:before
   content: "F"
 
-.icon-quiz:before 
+.icon-quiz:before
   content: "G"
 
-.icon-users:before 
+.icon-users:before
   content: "H"
 
-.icon-triangle:before 
+.icon-triangle:before
   content: "I"
 
-.icon-folder-add:before 
+.icon-folder-add:before
   content: "J"
 
-.icon-dunno-logo:before 
+.icon-dunno-logo:before
   content: "K"
 
-.icon-tasks:before 
+.icon-tasks:before
   content: "L"
 
-.icon-file-circle:before 
+.icon-file-circle:before
   content: "M"
 
-.icon-clock:before 
+.icon-clock:before
   content: "N"
 
-.icon-calendar:before 
+.icon-calendar:before
   content: "O"
 
-.icon-file-check:before 
+.icon-file-check:before
   content: "P"
 
-.icon-cards:before 
+.icon-cards:before
   content: "Q"
 
-.icon-chat-2:before 
+.icon-chat-2:before
   content: "R"
 
-.icon-file-lock:before 
+.icon-file-lock:before
   content: "S"
 
-.icon-lists:before 
+.icon-lists:before
   content: "T"
 
-.icon-strip:before 
+.icon-strip:before
   content: "U"
 
-.icon-files:before 
+.icon-files:before
   content: "V"
 
-.icon-chat:before 
+.icon-chat:before
   content: "W"
 
-.icon-support:before 
+.icon-support:before
   content: "X"
 
-.icon-file:before 
+.icon-file:before
   content: "Y"
 
-.icon-check:before 
+.icon-check:before
   content: "Z"
 
-.icon-arrow-circle-right:before 
+.icon-arrow-circle-right:before
   content: "0"
 
-.icon-circle-small:before 
+.icon-circle-small:before
   content: "d"
 
-.icon-circle-small-outline:before 
+.icon-circle-small-outline:before
   content: "f"
 
-.icon-circle-big-outline:before 
+.icon-circle-big-outline:before
   content: "g"
 
-.icon-circle-big:before 
+.icon-circle-big:before
   content: "h"
 
-.icon-arrow-back:before 
+.icon-arrow-back:before
   content: "j"
 
-.icon-trash:before 
+.icon-trash:before
   content: "k"
-
