--- a/src/templates/diary.slim
+++ b/src/templates/diary.slim
@@ -1,12 +1,12 @@
 header.page-title.scheme-1
   .row
     .large-3.columns.vertical-center
-      a class="button radius btn-header-left btn-style-1"
+      a class="button radius btn-style-1"
         span.icon-arrow-back
         Ver todas as aulas
     .large-4.large-centered.vertical-center.columns
       h1 TR230 
-      span.subtitle Colégio Anchieta - 2ª série
+      span.subtitle.secondary-color Colégio Anchieta - 2ª série
 .row      
   .event-carousel
     a class="icon-arrow-circle-left arrow-left vertical-center" 
@@ -17,7 +17,7 @@ header.page-title.scheme-1
   .container
     .title.diary-label
       h1 Diário
-      .span.subtitle Tarefas visíveis para os alunos
+      span.subtitle.secondary-color Tarefas visíveis para os alunos
 
     .container-body
       table
@@ -43,7 +43,7 @@ header.page-title.scheme-1
     .title.notes-label
       span.icon-lock 
       span Anotações
-      .span.subtitle Tarefas visíveis para os alunos
+      span.subtitle.secondary-color Tarefas visíveis para os alunos
 
     .container-body
       table
