--- a/src/templates/events.slim
+++ b/src/templates/events.slim
@@ -1,7 +1,7 @@
 header.page-title
   .row
     .large-3.columns.vertical-center
-      a href="#/diary.html" class="button radius btn-header-left btn-style-1" Planejar nova aula
+      a href="#/diary.html" class="button radius btn-style-1" Planejar nova aula
     .large-4.large-centered.vertical-center.columns
       h1 Aulas
 .row
@@ -10,7 +10,7 @@ header.page-title
 		li.card.event
 			.title.scheme-1
 				h1 Tr230
-				span.subtitle Colégio Anchieta - 2ª série
+				span.subtitle.secondary-color Colégio Anchieta - 2ª série
 			.status.scheme-1 
 				span.course Portugues
 				a class="button radius timer" 0:30
@@ -22,7 +22,7 @@ header.page-title
 		li.card.event
 			.title.scheme-2
 				h1 Tr230
-				span.subtitle Colégio Anchieta - 2ª série
+				span.subtitle.secondary-color Colégio Anchieta - 2ª série
 			.status.scheme-2
 				span.course Portugues
 				a class="button radius timer" 0:30
@@ -34,7 +34,7 @@ header.page-title
 		li.card.event
 			.title.scheme-3
 				h1 Tr230
-				span.subtitle Colégio Anchieta - 2ª série
+				span.subtitle.secondary-color Colégio Anchieta - 2ª série
 			.status.scheme-3
 				span.course Portugues
 				a class="button radius timer" 0:30
