--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -6,6 +6,7 @@
 @import shared/buttons
 @import shared/schemes
 @import shared/cards
+@import shared/overlay
 @import pages/courses
 @import pages/events
 @import pages/diary
