--- a/src/sass/shared/_buttons.sass
+++ b/src/sass/shared/_buttons.sass
@@ -1,12 +1,48 @@
-$inactive-color: #c5c5c5
+
+$btn-style-1-height: 38px
+$btn-style-1-bg-color: $secondary-color
+$btn-style-1-hover-bg-color: #149E5F
+$btn-style-1-inactive-bg-color: $inactive-color
+
+$btn-style-transparent-height: 27px
+$btn-style-transparent-bg-color: transparent
+$btn-style-transparent-font-size: 12px
+$btn-style-transparent-font-weight: 600
+
+$btn-style-transparent-1-font-color: white
+$btn-style-transparent-1-border: 1px solid $btn-style-transparent-1-font-color
+
+$btn-style-transparent-2-font-color: $primary-color
+$btn-style-transparent-2-border: 1px solid $btn-style-transparent-2-font-color
 
 .btn-style-1
-	padding: 0 36px
-	height: 38px
-	line-height: 38px
-	background-color: #1CC678
+  padding: 0 36px
+  height: $btn-style-1-height
+  line-height: $btn-style-1-height
+  background-color: $secondary-color
 
-	&:active, &:hover
-		background-color: #149E5F
-	&.inactive
-		bg-color: $inactive-color
+  &:active, &:hover
+    background-color: $btn-style-1-hover-bg-color
+  &.inactive
+    bg-color: $btn-style-1-inactive-bg-color
+
+%btn-style-transparent
+  padding: 0 25px
+  margin: 0
+  height: $btn-style-transparent-height
+  line-height: $btn-style-transparent-height
+  background-color: $btn-style-transparent-bg-color
+  font-size: $btn-style-transparent-font-size
+  font-weight: $btn-style-transparent-font-weight
+  &:hover
+    background-color: $btn-style-transparent-bg-color
+
+.btn-style-transparent-1, .btn-style-transparent-1:hover
+  @extend %btn-style-transparent
+  border: $btn-style-transparent-1-border
+  color: $btn-style-transparent-1-font-color
+
+.btn-style-transparent-2, .btn-style-transparent-2:hover
+  @extend %btn-style-transparent
+  border: $btn-style-transparent-2-border
+  color: $btn-style-transparent-2-font-color
