--- a/src/sass/shared/_cards.sass
+++ b/src/sass/shared/_cards.sass
@@ -1,6 +1,6 @@
 
 .card
-  div:nth-child(1)
+  & > div:nth-child(1)
     @include side-radius(top)
-  div:nth-last-child(1)
+  & > div:nth-last-child(1)
     @include side-radius(bottom)
