--- a/src/templates/courses.slim
+++ b/src/templates/courses.slim
@@ -4,62 +4,71 @@ header.page-title
       a class="button radius btn-style-1" Criar nova turma
     .large-4.large-centered.vertical-center.columns
       h1 Turmas
+
 .row
   ul.courses.large-block-grid-2
 
     li.card.course
       .scheme-1.title
         h1 Tr230
-        span.subtitle Colégio Anchieta - 2ª série
+        span.subtitle.secondary-color Colégio Anchieta - 2ª série
+        i.icons.icon-arrow-right.secondary-color.vertical-center
       .events
-        table
-          tr ng-repeat="i in [1,2,3,4,5,6]"
-            td icon
-            td 03
-            td Português
-            td 10 mai
-            td seg
-            td 10h - 12h
+        .row.has-overlay ng-repeat="i in [1,2,3,4,5,6]"
+          a.overlay.published.hide href="#/courses.html"
+            .button.btn-style-transparent-1.radius.vertical-center ver diário
+          .large-1.columns icon
+          .large-1.columns 03
+          .large-4.columns Português
+          .large-2.columns 10 mai
+          .large-1.columns seg
+          .large-3.columns 10h - 12h
 
     li.card.course
       .scheme-2.title
         h1 j107
-        span.subtitle Colégio Anchieta - 2ª série
+        span.subtitle.secondary-color Colégio Anchieta - 2ª série
+        i.icons.icon-arrow-right.secondary-color.vertical-center
       .events
-        table
-          tr ng-repeat="i in [1,2,3]"
-            td icon
-            td 03
-            td Literatura
-            td 10 mai
-            td seg
-            td 10h - 12h
+        .row.has-overlay ng-repeat="i in [1,2,3]"
+          a.overlay.published.hide href="#/courses.html"
+            .button.btn-style-transparent-1.radius.vertical-center ver diário
+          .large-1.columns icon
+          .large-1.columns 03
+          .large-4.columns Literatura
+          .large-2.columns 10 mai
+          .large-1.columns seg
+          .large-3.columns 10h - 12h
 
     li.card.course
       .scheme-3.title
         h1 Tr230
-        span.subtitle Colégio Anchieta - 2ª série
+        span.subtitle.secondary-color Colégio Anchieta - 2ª série
+        i.icons.icon-arrow-right.secondary-color.vertical-center
       .events
-        table
-          tr ng-repeat="i in [1,2,3,4,5,6]"
-            td icon
-            td 03
-            td Português
-            td 10 mai
-            td seg
-            td 10h - 12h
+        .row.has-overlay ng-repeat="i in [1,2,3,4,5,6]"
+          a.overlay.published.hide href="#/courses.html"
+            .button.btn-style-transparent-1.radius.vertical-center ver diário
+          .large-1.columns icon
+          .large-1.columns 03
+          .large-4.columns Português
+          .large-2.columns 10 mai
+          .large-1.columns seg
+          .large-3.columns 10h - 12h
 
     li.card.course
       .scheme-4.title
         h1 Tr230
-        span.subtitle Colégio Anchieta - 2ª série
+        span.subtitle.secondary-color Colégio Anchieta - 2ª série
+        i.icons.icon-arrow-right.secondary-color.vertical-center
       .events
-        table
-          tr ng-repeat="i in [1,2,3,4,5,6]"
-            td icon
-            td 03
-            td Português
-            td 10 mai
-            td seg
-            td 10h - 12h
+        .row.has-overlay ng-repeat="i in [1,2,3,4,5,6]"
+          a.overlay.published.hide href="#/courses.html"
+            .button.btn-style-transparent-1.radius.vertical-center ver diário
+          .large-1.columns icon
+          .large-1.columns 03
+          .large-4.columns Português
+          .large-2.columns 10 mai
+          .large-1.columns seg
+          .large-3.columns 10h - 12h
 
