--- a/src/templates/index.slim
+++ b/src/templates/index.slim
@@ -9,15 +9,12 @@ html.no-js lang="en" ng-app="DunnoApp"
     link href="css/foundation.css" rel="stylesheet" /
     link href="css/app.css" rel="stylesheet" /
     script src="js/modernizr/modernizr.js"
-    script src="js/vendor/jquery.js"
-    script src="js/foundation/foundation.js"
-    script src="js/foundation/foundation.dropdown.js"
   body
     nav class="top-bar" data-topbar=""
       ul class="title-area"
         li class="name"
           h1
-            a class="icon-dunno-logo" href="#"
+            a class="icons icon-dunno-logo" href="#"
       section class="top-bar-section"
         ul class="left"
           li
@@ -36,6 +33,7 @@ html.no-js lang="en" ng-app="DunnoApp"
     script src="js/jquery/dist/jquery.min.js"
     script src="js/foundation/js/foundation.min.js"
     script src="js/foundation/js/foundation/foundation.magellan.js"
+    script src="js/foundation/js/foundation/foundation.dropdown.js"
     script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular.js"
     script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular-route.js"></script>
     script src="js/angular-scroll/angular-scroll.min.js"
@@ -52,7 +50,6 @@ html.no-js lang="en" ng-app="DunnoApp"
       .controller('MainCtrl', ['$scope', '$document', function($scope, $document){
         $scope.$on('$viewContentLoaded', function () {
           $(document).foundation();
-          console.log("WTF");
         });
       }]);
 
