Fixing icons names

--- a/src/sass/pages/_courses.sass
+++ b/src/sass/pages/_courses.sass
@@ -3,6 +3,7 @@ $course-card-width: 470px
 $course-card-title-height: 80px
 $course-card-events-height: 310px
 $course-card-border: solid 1px #dddddd
+$course-card-arrow-size: rem-calc(40)
 
 li.course
   padding-bottom: 42px
@@ -16,10 +17,10 @@ li.course
   .subtitle
     font-size: 0.8rem
 
-  .icon-arrow-right
+  .icons
     float: right
-    font-size: rem-calc(30)
-    line-height: rem-calc(30)
+    font-size: $course-card-arrow-size
+    line-height: $course-card-arrow-size
     margin-right: 10px
 
   h1
