--- a/src/templates/courses.slim
+++ b/src/templates/courses.slim
@@ -12,7 +12,7 @@ header.page-title
       .scheme-1.title
         h1 Tr230
         span.subtitle.secondary-color Colégio Anchieta - 2ª série
-        i.icons.icon-arrow-right.secondary-color.vertical-center
+        i.icons.icon-arrow-open.secondary-color.vertical-center
       .events
         .row.has-overlay ng-repeat="i in [1,2,3,4,5,6]"
           a.overlay.published.hide href="#/courses.html"
@@ -28,7 +28,7 @@ header.page-title
       .scheme-2.title
         h1 j107
         span.subtitle.secondary-color Colégio Anchieta - 2ª série
-        i.icons.icon-arrow-right.secondary-color.vertical-center
+        i.icons.icon-arrow-open.secondary-color.vertical-center
       .events
         .row.has-overlay ng-repeat="i in [1,2,3]"
           a.overlay.published.hide href="#/courses.html"
@@ -44,7 +44,7 @@ header.page-title
       .scheme-3.title
         h1 Tr230
         span.subtitle.secondary-color Colégio Anchieta - 2ª série
-        i.icons.icon-arrow-right.secondary-color.vertical-center
+        i.icons.icon-arrow-open.secondary-color.vertical-center
       .events
         .row.has-overlay ng-repeat="i in [1,2,3,4,5,6]"
           a.overlay.published.hide href="#/courses.html"
@@ -60,7 +60,7 @@ header.page-title
       .scheme-4.title
         h1 Tr230
         span.subtitle.secondary-color Colégio Anchieta - 2ª série
-        i.icons.icon-arrow-right.secondary-color.vertical-center
+        i.icons.icon-arrow-open.secondary-color.vertical-center
       .events
         .row.has-overlay ng-repeat="i in [1,2,3,4,5,6]"
           a.overlay.published.hide href="#/courses.html"
