--- a/src/templates/styleguide.slim
+++ b/src/templates/styleguide.slim
@@ -42,6 +42,7 @@ header.page-title
           .scheme-1.title
             h1 Tr230
             span.subtitle.secondary-color Colégio Anchieta - 2ª série
+            i.icons.icon-arrow-open.secondary-color.vertical-center
           .events
             .row.has-overlay ng-repeat="i in [1,2,3,4,5,6]"
               a.overlay.published.hide href="#/courses.html"
