--- a/src/sass/_icons.sass
+++ b/src/sass/_icons.sass
@@ -2,8 +2,8 @@
 
 @font-face
   font-family: "dunno-icon-font"
-  src: url("/fonts/dunno-icon-font.eot")
-  src: url("/fonts/dunno-icon-font.eot?#iefix") format("embedded-opentype"), url("/fonts/dunno-icon-font.woff") format("woff"), url("/fonts/dunno-icon-font.ttf") format("truetype"), url("/fonts/dunno-icon-font.svg#dunno-icon-font") format("svg")
+  src: url("../fonts/dunno-icon-font.eot")
+  src: url("../fonts/dunno-icon-font.eot?#iefix") format("embedded-opentype"), url("../fonts/dunno-icon-font.woff") format("woff"), url("../fonts/dunno-icon-font.ttf") format("truetype"), url("../fonts/dunno-icon-font.svg#dunno-icon-font") format("svg")
   font-weight: normal
   font-style: normal
 
