upload new page: diary

--- a/src/sass/shared/_buttons.sass
+++ b/src/sass/shared/_buttons.sass
@@ -26,6 +26,25 @@ $btn-style-transparent-2-border: 1px solid $btn-style-transparent-2-font-color
   &.inactive
     bg-color: $btn-style-1-inactive-bg-color
 
+.btn-style-2
+  text-align: left !important
+  padding: 0 10px
+  height: $btn-style-1-height
+  font-size: 0.8rem
+  font-weight: 600
+  line-height: $btn-style-1-height
+  text-transform: uppercase
+  background-color: $btn-style-transparent-bg-color
+  color: $primary-color
+  border: $btn-style-transparent-2-border
+
+  &:active, &:hover
+    background-color: $primary-color
+    color: white
+  &.inactive
+    bg-color: $btn-style-1-inactive-bg-color
+
+
 %btn-style-transparent
   padding: 0 25px
   margin: 0
