--- a/src/templates/styleguide.slim
+++ b/src/templates/styleguide.slim
@@ -30,6 +30,9 @@ header.page-title
         li
           .scheme-1 style="padding: 20px;"
             a class="button radius btn-style-transparent-2" style-transparent-2
+        li
+          .scheme-1 style="padding: 20px;"
+            a class="button radius btn-style-2" Style 2
 
     .row
       h2 Cards and Schemes
