--- a/src/sass/pages/_diary.sass
+++ b/src/sass/pages/_diary.sass
@@ -1,7 +1,12 @@
-$diary-container-width: 800px
+$diary-container-width: 750px
 $diary-title-height: 90px
-$diary-card-border: solid 1px #dddddd
+$diary-card-border: 1px solid #ddd
 
+
+.subtitle-head
+  text-align: center
+  margin: 0 auto
+  
 
 .event-carousel
   border: 1px solid $primary-color
@@ -10,7 +15,7 @@ $diary-card-border: solid 1px #dddddd
   margin: 0 auto
   width: $diary-container-width
   padding: 0 20px
-    
+   
   h1
     font-size: 1.5rem
     color: $primary-color
@@ -19,15 +24,23 @@ $diary-card-border: solid 1px #dddddd
 
   .arrow-left
     float: left
+    font-size: 2rem
+    line-height: 1rem
 
   .arrow-right
     float: right
+    font-size: 2rem
+    line-height: 1rem
+
+.event-status
+  margin: 20px auto
+  width: $diary-container-width
 
 .container
   width: $diary-container-width
   background: white
   border: $diary-card-border
-  margin: 20px auto 0
+  margin: 20px auto 20px
   padding: 0
 
   .title
@@ -35,6 +48,18 @@ $diary-card-border: solid 1px #dddddd
     position: relative
     border-left-width: 10px
     border-left-style: solid
+    padding: 30px 0 0 15px
+
+    h1
+      font-size: 1.2rem
+      line-height: 0.5rem
+      text-transform: uppercase
+      font-weight: bold
+      margin-top: 0
+      
+      
+    .subtitle
+      font-size: 0.7rem
 
   .diary-label
     border-left-color: #1cc678
@@ -42,39 +67,48 @@ $diary-card-border: solid 1px #dddddd
   .notes-label
     border-left-color: #ff5950
 
-  h1
-    font-size: 1.2rem
-    text-transform: uppercase
-    font-weight: bold
-    margin-top: 0
 
-.subtitle
-  font-size: 0.7rem
-
-.container-body
-  border-top: 1px solid black
-  padding: 0 20px
-  table
-    width: 100%
+  .tasks
+    border-top: 1px solid black
+    padding: 0 30px
+  
+  .row
     margin: 0 auto
-    tr
-      height: 50px
-      border-bottom: $diary-card-border
+    padding: 12px 0 6px
+    border-bottom: $diary-card-border    
 
-.task-box
-  height: 50px
-  margin: 0 auto
-  background: #ddd
-  border-radius: $global-radius
-  padding: 10px
-
-.task-checkbox
-  border: 2px solid black
+  .task-box
+    margin: 0 auto 10px
+    background: #ddd
+    border-radius: $global-radius
+    padding: 15px
+    font-size: 0.8rem
+      
 
 .task-icon-right
-  font-size: 1.5rem
+  font-size: 1.1rem
   color: #bbb
   float: right
   position: relative
-  margin-left: 8px
-  @extend .vertical-center
+  margin-left: 10px
+
+.foot
+  border-top: 1px solid black 
+  padding: 25px 30px
+  position: relative
+  
+.add
+  position: absolute
+  margin-top: 7px
+  margin-left: 655px
+  font-size: 1.5rem   
+
+.pos
+  margin-right: 10px
+
+.icon
+  font-size: 1rem
+  line-height: 0.3rem
+
+.notes
+  border-color: red
