--- a/src/templates/diary.slim
+++ b/src/templates/diary.slim
@@ -1,62 +1,85 @@
 header.page-title.scheme-1
   .row
     .large-3.columns.vertical-center
-      a class="button radius btn-style-1"
-        span.icon-arrow-back
-        Ver todas as aulas
+      a class="button radius btn-style-2" 
+        span.icon-arrow-back.pos
+        | Ver todas as aulas
+
     .large-4.large-centered.vertical-center.columns
       h1 TR230 
-      span.subtitle.secondary-color Colégio Anchieta - 2ª série
-.row      
-  .event-carousel
-    a class="icon-arrow-circle-left arrow-left vertical-center" 
-    a class="icon-arrow-circle-right arrow-right vertical-center" 
-    h1.vertical-center Aula 4
+      p.secondary-color.subtitle-head Colégio Anchieta - 2ª série
 
-.row.card
-  .container
-    .title.diary-label
-      h1 Diário
-      span.subtitle.secondary-color Tarefas visíveis para os alunos
+.row.event-carousel
+  a class="icon-arrow-circle-left arrow-left vertical-center" 
+  a class="icon-arrow-circle-right arrow-right vertical-center" 
+  h1.vertical-center Aula 4
 
-    .container-body
-      table
-        tr
-          td 
-            input type="checkbox" class="task-checkbox" 
-            label Revisar temas de casa
-            .task-box 
-              span.icon-quiz
-              Pergunta para a primeira enquente
-              a class="icon-trash task-icon-right"
-              a class="icon-eye task-icon-right"
-        tr 
-          td 
-            input type="checkbox" 
-            label Revisar temas de casa
-      .container-foot
-        input type="text"
-        label Ex: fazendo ditado
+.row.event-status
+  .large-5.columns
+    span.icon-calendar.pos
+    a class="button radius btn-style-2" 
+      | 12 de maio
+      | Segunda-Feira
+  .large-3.columns.offset-2
+    span.icon-clock.pos
+    a class="button radius btn-style-2" 
+      | 14:00
+    |   às   
+    a class="button radius btn-style-2" 
+      | 16:00
+  .large-1.columns
+    a class="button radius btn-style-2" 
+      span.icon-boy
+  .large-3.columns
+    a class="button radius btn-style-1"
+      | Aberta
+      span.icon-arrow-down
 
-.row.card
-  .container
+.row.card.container
+  .title.diary-label
+    h1 Diário
+    span.subtitle.secondary-color Tarefas visíveis para os alunos
+
+  .tasks
+    .row
+      input type="checkbox" 
+      label Revisar temas de casa
+      .task-box
+        span.icon-quiz.pos
+        | Pergunta para a primeira enquente
+        a class="icon-trash task-icon-right"
+        a class="icon-eye task-icon-right"
+    .row  
+      input type="checkbox" 
+      label Revisar temas de casa
+      a class="icon-transfer task-icon-right"
+
+  .foot
+    a.icon-folder-add.add
+    input type="text" placeholder="Adicionar Tarefa"
+    
+    label Ex: Fazendo ditado
+
+.row.card.container.notes
     .title.notes-label
-      span.icon-lock 
-      span Anotações
+        
+      h1 <span class="icon-lock icon"></span> Anotações       
       span.subtitle.secondary-color Tarefas visíveis para os alunos
 
-    .container-body
-      table
-        tr
-          td 
-            input type="checkbox" 
-            label Revisar temas de casa
-            .task-box Pergunta para a primeira enquente
+    .tasks
+      .row
+        input type="checkbox" 
+        label Revisar temas de casa
+        .task-box 
+          | Pergunta para a primeira enquente
+          a class="icon-trash task-icon-right"
+          a class="icon-eye task-icon-right"
 
-        tr ng-repeat="i in [1,2,3,4,5,6]"
-          td 
-            input type="checkbox" 
-            label Revisar temas de casa
-      .container-foot
-        input type="text"
-        label Ex: fazendo ditado
+      .row ng-repeat="i in [1,2,3,4,5,6]"
+        input type="checkbox" 
+        label Revisar temas de casa
+    .foot
+      input type="text" placeholder="Adicionar Anotação"
+      label Ex: fazendo ditado
+
+
